tests/checker/diagnostics/0936_gadt_equality_cast_mismatch_08.ml.infer.expected
File "0936_gadt_equality_cast_mismatch_08.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0936_gadt_equality_cast_mismatch_08 is not a valid module name.

File "0936_gadt_equality_cast_mismatch_08.ml", line 7, characters 20-24:
7 |     | Refl_theta -> true
                        ^^^^
Error: The constructor true has type bool
       but an expression was expected of type b = a
